--- a/client/vite-project/package.json
+++ b/client/vite-project/package.json
@@ -1,6 +1,7 @@
 {
   "name": "vite-project",
   "private": true,
+  "proxy": "https://mernblog2.onrender.com",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
